load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])


cc_test(
    name = "MyGraph-test",
    srcs = glob([
        "MyGraph.Test.cpp",
        #"List-test/**/*.hpp",
        #"List-test/**/*.h",
    ]),
    defines = ["CATCH_CONFIG_MAIN"],
    deps = ["//include/cycles:cycles_hpp", 
     ":catch2_thirdparty"],
    #copts=['-g']
)

cc_binary(
    name = "test_demo_graph2",
    srcs = ["demo_graph2.cpp"],
    deps=["//include/cycles:cycles_hpp", 
    "//src/demo_cptr:all_hpp"]
)


cc_library(
    name = "catch2_thirdparty",
    hdrs = ["thirdparty/catch2/catch_amalgamated.hpp"],
    srcs = ["thirdparty/catch2/catch_amalgamated.cpp"],
    strip_include_prefix="thirdparty/",
    #include_prefix = "catch2/"
)

test_suite(
    name = "all-tests",
    tests = [
        "MyGraph-test"
    ]
)
